basic review frontend logic is implmented

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
                 <a class="nav-link" href="{% url 'index' %}">Admin Dashboard</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Review Reports</a>
+                <a class="nav-link" href="{% url 'review-list' %}">Review Reports</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'logout' %}">Logout</a>
