--- a/citizens_reports/templates/citizens_reports/review_list.html
+++ b/citizens_reports/templates/citizens_reports/review_list.html
@@ -41,7 +41,13 @@
                 </div>
                 <div class="card-footer text-end">
                     <a href="{% url 'verify-citizen-report' pk=report.id %}" class="btn btn-success">Verify</a>
-                    <button class="btn btn-danger">Reject</button>
+                    <button class="btn btn-danger"
+                        hx-post="{% url 'reject-report' pk=report.id %}"
+                        hx-confirm="Are you sure you want to reject this report? This action cannot be undone."
+                        hx-target="closest .card"
+                        hx-swap="outerHTML">
+                    Reject
+                </button>
                 </div>
             </div>
         {% endfor %}
