--- a/templates/index.html
+++ b/templates/index.html
@@ -29,13 +29,13 @@ block.super }}{% endblock %} {% block content %} {% if user.is_authenticated %}
                     </select>
                 </div>
                 <div class="col-md-3">
-                    <label for="danger_score_min" class="form-label">Min Danger Score</label>
-                    <input type="number" name="danger_score__gte" id="danger_score_min" class="form-control" step="0.01" min="0" max="1">
-                </div>
-                <div class="col-md-3">
-                    <label for="danger_score_max" class="form-label">Max Danger Score</label>
-                    <input type="number" name="danger_score__lte" id="danger_score_max" class="form-control" step="0.01" min="0" max="1">
-                </div>
+                  <label for="danger_score_min" class="form-label">Min Danger Score</label>
+                  <input type="number" name="danger_score_min" id="danger_score_min" class="form-control" step="0.01" min="0" max="1">
+              </div>
+              <div class="col-md-3">
+                  <label for="danger_score_max" class="form-label">Max Danger Score</label>
+                  <input type="number" name="danger_score_max" id="danger_score_max" class="form-control" step="0.01" min="0" max="1">
+              </div>
             </div>
         </form>
     </div>
