--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@ block.super }}{% endblock %} {% block content %} {% if user.is_authenticated %}
     <div class="row g-3">
         <div class="col-md-3">
             <label for="ordnance_type" class="form-label">Ordnance Type</label>
-            <select name="ordnance_type" class="form-select" id="ordnance_type">
+            <select name="ordnance_type" class="form-select" id="ordnance_type" multiple>
                 <option value="">All Types</option>
                 {% for value, display_name in ordnance_type_choices %}
                     <option value="{{ value }}">{{ display_name }}</option>
@@ -21,7 +21,7 @@ block.super }}{% endblock %} {% block content %} {% if user.is_authenticated %}
         </div>
         <div class="col-md-3">
             <label for="ordnance_condition" class="form-label">Condition</label>
-            <select name="ordnance_condition" class="form-select" id="ordnance_condition">
+            <select name="ordnance_condition" class="form-select" id="ordnance_condition" multiple>
                 <option value="">All Conditions</option>
                 {% for value, display_name in ordnance_condition_choices %}
                     <option value="{{ value }}">{{ display_name }}</option>
@@ -30,7 +30,7 @@ block.super }}{% endblock %} {% block content %} {% if user.is_authenticated %}
         </div>
         <div class="col-md-3">
             <label for="burial_status" class="form-label">Burial Status</label>
-            <select name="burial_status" class="form-select" id="burial_status">
+            <select name="burial_status" class="form-select" id="burial_status" multiple>
                 <option value="">All Statuses</option>
                 {% for value, display_name in burial_status_choices %}
                     <option value="{{ value }}">{{ display_name }}</option>
@@ -39,7 +39,7 @@ block.super }}{% endblock %} {% block content %} {% if user.is_authenticated %}
         </div>
         <div class="col-md-3">
             <label for="proximity_to_civilians" class="form-label">Proximity</label>
-            <select name="proximity_to_civilians" class="form-select" id="proximity_to_civilians">
+            <select name="proximity_to_civilians" class="form-select" id="proximity_to_civilians" multiple>
                 <option value="">All Proximities</option>
                 {% for value, display_name in proximity_to_civilians_choices %}
                     <option value="{{ value }}">{{ display_name }}</option>
