--- a/templates/index.html
+++ b/templates/index.html
@@ -9,53 +9,62 @@ block.super }}{% endblock %} {% block content %} {% if user.is_authenticated %}
     </div>
     <div class="card-body">
         <form id="filter-form">
-    <div class="row g-3">
-        <div class="col-md-3">
-            <label for="ordnance_type" class="form-label">Ordnance Type</label>
-            <select name="ordnance_type" class="form-select" id="ordnance_type" multiple>
-                <option value="">All Types</option>
-                {% for value, display_name in ordnance_type_choices %}
-                    <option value="{{ value }}">{{ display_name }}</option>
-                {% endfor %}
-            </select>
-        </div>
-        <div class="col-md-3">
-            <label for="ordnance_condition" class="form-label">Condition</label>
-            <select name="ordnance_condition" class="form-select" id="ordnance_condition" multiple>
-                <option value="">All Conditions</option>
-                {% for value, display_name in ordnance_condition_choices %}
-                    <option value="{{ value }}">{{ display_name }}</option>
-                {% endfor %}
-            </select>
-        </div>
-        <div class="col-md-3">
-            <label for="burial_status" class="form-label">Burial Status</label>
-            <select name="burial_status" class="form-select" id="burial_status" multiple>
-                <option value="">All Statuses</option>
-                {% for value, display_name in burial_status_choices %}
-                    <option value="{{ value }}">{{ display_name }}</option>
-                {% endfor %}
-            </select>
-        </div>
-        <div class="col-md-3">
-            <label for="proximity_to_civilians" class="form-label">Proximity</label>
-            <select name="proximity_to_civilians" class="form-select" id="proximity_to_civilians" multiple>
-                <option value="">All Proximities</option>
-                {% for value, display_name in proximity_to_civilians_choices %}
-                    <option value="{{ value }}">{{ display_name }}</option>
-                {% endfor %}
-            </select>
-        </div>
-        <div class="col-md-6">
-            <label for="danger_score_min" class="form-label">Min Danger Score</label>
-            <input type="number" name="danger_score_min" id="danger_score_min" class="form-control" step="0.01" min="0" max="1">
-        </div>
-        <div class="col-md-6">
-            <label for="danger_score_max" class="form-label">Max Danger Score</label>
-            <input type="number" name="danger_score_max" id="danger_score_max" class="form-control" step="0.01" min="0" max="1">
-        </div>
-    </div>
-</form>
+          <div class="row g-3 align-items-end">
+              <div class="col-md-3">
+                  <label for="ordnance_type" class="form-label">Ordnance Type</label>
+                  <select name="ordnance_type" class="form-select" id="ordnance_type" multiple size="3">
+                      {% for value, display_name in ordnance_type_choices %}
+                          <option value="{{ value }}">{{ display_name }}</option>
+                      {% endfor %}
+                  </select>
+              </div>
+          <div class="col-md-3">
+              <label for="ordnance_condition" class="form-label">Condition</label>
+              <select name="ordnance_condition" class="form-select" id="ordnance_condition" multiple size="3">
+                  {% for value, display_name in ordnance_condition_choices %}
+                      <option value="{{ value }}">{{ display_name }}</option>
+                  {% endfor %}
+              </select>
+          </div>
+          <div class="col-md-3">
+              <label for="burial_status" class="form-label">Burial Status</label>
+              <select name="burial_status" class="form-select" id="burial_status" multiple size="3">
+                  {% for value, display_name in burial_status_choices %}
+                      <option value="{{ value }}">{{ display_name }}</option>
+                  {% endfor %}
+              </select>
+          </div>
+          <div class="col-md-3">
+              <label for="proximity_to_civilians" class="form-label">Proximity</label>
+              <select name="proximity_to_civilians" class="form-select" id="proximity_to_civilians" multiple size="3">
+                  {% for value, display_name in proximity_to_civilians_choices %}
+                      <option value="{{ value }}">{{ display_name }}</option>
+                  {% endfor %}
+              </select>
+          </div>
+
+          <div class="col-12">
+              <p class="form-text text-muted small mb-0">
+                  Tip: Hold Ctrl (or Cmd on Mac) to select multiple options in the dropdowns above.
+              </p>
+          </div>
+
+          <hr class="my-3">
+
+          <div class="col-md-4">
+              <label for="region_search" class="form-label">Region Name Contains</label>
+              <input type="text" name="region" id="region_search" class="form-control">
+          </div>
+          <div class="col-md-4">
+              <label for="danger_score_min" class="form-label">Min Danger Score</label>
+              <input type="number" name="danger_score_min" id="danger_score_min" class="form-control" step="0.01" min="0" max="1">
+          </div>
+          <div class="col-md-4">
+              <label for="danger_score_max" class="form-label">Max Danger Score</label>
+              <input type="number" name="danger_score_max" id="danger_score_max" class="form-control" step="0.01" min="0" max="1">
+          </div>
+      </div>
+  </form>
     </div>
 </div>
 
