--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,9 @@
               <a class="nav-link" href="{% url 'review-list' %}">Review Inbox</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link {% if request.resolver_match.view_name == 'data-import-page' %}active{% endif %}" href="{% url 'data-import-page' %}">Data Import</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="{% url 'logout' %}">Logout</a>
             </li>
             
