corrected the rendered text on the data import view on the UI

--- a/templates/data_import.html
+++ b/templates/data_import.html
@@ -13,7 +13,7 @@
         <div class="card-body">
             <div class="alert alert-info">
                 <strong>Instructions:</strong> Please upload a CSV file with the following columns:
-                <code>latitude</code>, <code>longitude</code>, <code>region_name</code>, <code>ordnance_type</code>, <code>ordnance_condition</code>, <code>is_loaded</code>, <code>proximity_to_civilians</code>, <code>burial_status</code>.
+                <code>latitude</code>, <code>longitude</code>, <code>ordnance_type</code>, <code>ordnance_condition</code>, <code>is_loaded</code>, <code>proximity_to_civilians</code>, <code>burial_status</code>.
             </div>
 
             <form id="upload-form" enctype="multipart/form-data">
